<resources>

    <string name="app_name">YASP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="score">High Scores</string>
    <string name="help">Help</string>
    <string name="audio">Audio</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="top5_high_scores">Top 5 high scores!</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="help1_1">       Forma cadenas de 3 o más Andys del mismo color para ganar puntos</string>
    <string name="help1_2">Estas cadenas pueden ser horizontales o verticales</string>
    <string name="help2_1">Trata de hacer tantas líneas como puedas. No hay límite de tiempo</string>
    <string name="help2_2">               Trata de llenar la barra de puntos para pasar al siguiente nivel</string>

</resources>